[tool.poetry]
name = "jshooter"
version = "0.1.0"
description = ""
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.8.0"
flake8 = "^3.9.1"
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
